# anime-streamer

./: package.json  svelte.config.js  vite.config.ts
src/: app.css
src-tauri/: Cargo.toml  tauri.conf.json
src/lib/components/custom/: app-sidebar.svelte  header.svelte  sidebar-trigger.svelte
src/lib/components/ui/button/: button.svelte
src/lib/components/ui/sidebar/: sidebar-rail.svelte
src/routes/: +layout.svelte  +page.svelte
src/routes/my-list/: +page.svelte
src/routes/schedule/: +page.svelte
src/routes/search/: +page.svelte
src/routes/settings/: +page.svelte
