[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.4", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.2.4", features = [] }
tauri-plugin-log = "2.0.0-rc"

# Build configuration
[profile.dev]
incremental = true  # Compile your binary in smaller steps.

[profile.release]
codegen-units = 1   # Allows LLVM to perform better optimization.
lto = true          # Enables link-time-optimizations.
opt-level = 3       # "s" prioritizes small binary size. 3 prioritizes speed.
panic = "abort"     # Higher performance by disabling panic handlers.
strip = true        # Ensures debug symbols are removed.
